:sparkles: Introduce new api method to get commit dependencies directly
